[package]
name = "rustls"
version = "0.16.0"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "README.md"
description = "Rustls is a modern TLS library written in Rust."
homepage = "https://github.com/ctz/rustls"
repository = "https://github.com/ctz/rustls"
categories = ["network-programming", "cryptography"]
exclude = ["/sgx/*"]

[dependencies]
base64 = { git = "https://github.com/veracruz-project/rust-base64.git", branch="veracruz" }
log = { git = "https://github.com/veracruz-project/log.git", optional = true, branch="veracruz" }
ring = { git = "https://github.com/veracruz-project/ring.git", branch = "veracruz", version = "=0.16.11" }
sct = { git = "https://github.com/veracruz-project/sct.rs.git", branch = "veracruz" }
webpki = { git = "https://github.com/veracruz-project/webpki.git", branch = "veracruz" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[target.'cfg(target_os="optee")'.dependencies]
optee-utee = { git = "https://github.com/veracruz-project/rust-optee-trustzone-sdk.git", branch = "veracruz" }

[features]
default = ["logging", "ring/non_sgx"]
logging = ["log"]
dangerous_configuration = []
quic = []
mesalock_sgx = ["sgx_tstd", "base64/mesalock_sgx", "log/mesalock_sgx", "ring/mesalock_sgx","sct/mesalock_sgx", "webpki/mesalock_sgx"]

[dev-dependencies]
#env_logger = "0.6.1"
#log = "0.4.4"
#tempfile = "3.0"
#webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
#criterion = "0.2.11"

[[example]]
name = "bogo_shim"
path = "examples/internal/bogo_shim.rs"
required-features = ["dangerous_configuration", "quic"]

[[example]]
name = "trytls_shim"
path = "examples/internal/trytls_shim.rs"

[[example]]
name = "bench"
path = "examples/internal/bench.rs"

[[bench]]
name = "benchmarks"
path = "tests/benchmarks.rs"
harness = false
